# dagster-dbt-learn

./: .env  .gitignore  README.md  docker-compose.yml  init_raw.sh  main.py  pyproject.toml  raw_upload.py
dagster_lab/: README.md  pyproject.toml
dagster_lab/dagster_lab/: definitions.py
dagster_lab/dagster_lab/defs/: assets.py  schedules.py
dagster_lab/dagster_lab/defs/dbt_lab/: defs.yaml
dagster_lab/dagster_lab_tests/: test_assets.py
dbt_lab/: dbt_project.yml
dbt_lab/models/example/: deduplicate_raw.sql  my_second_dbt_model.sql
dbt_lab/models/example/marts/voicecalls/: facts.yml  fct_calls.sql  fct_events.sql  fct_events.yml  my_second_dbt_model.sql
dbt_lab/models/example/staging/voicecalls/: src_calls.yml  stg_deduplicate_raw.sql
dbt_lab/tests/: assert_duration_positive.sql  assert_ended_after_started.sql
sample_data/: sample_1.json  sample_2.json  sample_3.json  sample_calls_25.csv
src/dashboard/: app.py
