[project]
name = "dagster_lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt>=0.29.0",
    "dagster-dg-cli>=1.13.0",
    "dbt-postgres>=1.10.0",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["hatchling>=1.19.0"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "dagster_lab.definitions"
code_location_name = "dagster_lab"

[tool.dg]
directory_type = "project"
project.root_module = "dagster_lab"
